Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89018

The prediction of Pinyin input method is incorrect

    XMLWordPrintable

Details

    • All
    • bcd9320cc2c231bca7c671927f473ce82e6d071b (qt/qtvirtualkeyboard/dev) 2f0e9f98c6c6fdac09f762d41fddcc114f64b28a (qt/qtvirtualkeyboard/5.15)

    Description

      The prediction is based on the previous character instead of the last one.

      e.g. If I input "大家", the suggestions are based on "大" instead of "家".

      Attachments

        For Gerrit Dashboard: QTBUG-89018
        # Subject Branch Project Status CR V

        Activity

          People

            mitch_curtis Mitch Curtis
            niushouwei ShouWei Niu
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes