Suggest phrases based on the last selected word of pinyin

The prediction was based on the previous character instead of
the last one.

Fixes: QTBUG-89018
Change-Id: Ib48040fc922bf0e3e02a7912be2b0d8919a81658
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit bcd9320cc2c231bca7c671927f473ce82e6d071b)